Funcionario recuperado pelo rh-modelo-api